# AgentEvo

./: .gitignore  QUICKSTART.md  README.md  README_EN.md  pyproject.toml
.codebuddy/plans/: agent-evo-enhancement_c03f22cc.md
.codebuddy/skills/agent-development-guide/: SKILL.md
docs/: DESIGN.md
examples/simple-qa/: .env.example  agent-evo.yaml  agent.py  system_prompt.md
examples/simple-qa/tests/: basic.yaml
examples/simple-qa/tests/gold/: basic.yaml
examples/simple-qa/tests/silver/: generated.yaml
src/agent_evo/: __init__.py
src/agent_evo/adapters/: __init__.py  base.py  callable.py  http.py
src/agent_evo/cli/: __init__.py  main.py
src/agent_evo/cli/commands/: __init__.py  auto.py  eval.py  gate_check.py  import_cmd.py  init.py  mutate.py  report.py  review.py  run.py  stats.py
src/agent_evo/core/: __init__.py  config.py  evaluator.py  factors.py  generator.py  importer.py  mutator.py  optimizer.py  pipeline.py  serializer.py
src/agent_evo/integrations/: __init__.py  git.py
src/agent_evo/models/: __init__.py  config.py  diagnosis.py  eval_result.py  import_models.py  optimization.py  test_case.py
src/agent_evo/prompts/: aggregate.md  diagnose.md  judge.md  mutate.md  optimize.md  refine.md
src/agent_evo/utils/: __init__.py  i18n.py  llm.py
